# thesis

./: CMakeLists.txt  Database.cpp  Database.h  Genome.cpp  Genome.h  Population.cpp  Population.h  README.md  Rule.cpp  Rule.h  ShortData  ShortDataNot  main.cpp  utilities.cpp  utilities.h
